# git-tag-manager

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  build_app.sh  config.template.json  pyproject.toml  requirements.txt  run_gui.py
assets/: app_icons.icns
docs/: CONTRIBUTING.md  GIT_TAG_MANAGER.md  Project.md
git_tag_manager/: __init__.py  cli.py  core.py  gui.py
manager/: gui.py
