[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "git-tag-manager"
version = "1.0.0"
description = "Công cụ tự động hóa việc đánh version (tagging) cho các dự án Git"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "QuanNH"}
]
keywords = ["git", "tag", "version", "automation", "cli", "gui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
]

dependencies = [
    "customtkinter>=5.0.0",
    "rich>=13.0.0",
    "questionary>=2.0.0",
    "packaging>=23.0",
    "tkinterdnd2>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/quannh/git-tag-manager"
Repository = "https://github.com/quannh/git-tag-manager"

[project.scripts]
git-tag-cli = "git_tag_manager.cli:main"
git-tag-gui = "git_tag_manager.gui:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["git_tag_manager*"]
